--- a/SourceEngineTextureTool/Views/MainWindow.axaml
+++ b/SourceEngineTextureTool/Views/MainWindow.axaml
@@ -46,6 +46,8 @@
             <MenuItem Header="File">
                 <MenuItem Header="New" Command="{Binding InitializeWorkspace}" />
                 <Separator />
+                <MenuItem Header="Export as VTF" Command="{Binding ExportVtfCommand}" />
+                <Separator />
                 <MenuItem Header="Exit" />
             </MenuItem>
             <MenuItem Header="View">
